feat: dynamic game info
