# src/lib/catan-api-docs.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.1",
   "info": { "title": "OpenAPI definition", "version": "v0" },
-  "servers": [{ "url": "http://localhost:8080", "description": "Generated server url" }],
+  "servers": [{ "url": "https://merge-latest-ga0w.onrender.com/", "description": "Generated server url" }],
   "paths": {
     "/player/{id}": {
       "get": {
@@ -18,6 +18,24 @@
         "responses": { "200": { "description": "OK" } }
       }
     },
+    "/game/{id}": {
+      "get": {
+        "tags": ["game-controller"],
+        "operationId": "findGameById",
+        "parameters": [{ "name": "id", "in": "path", "required": true, "schema": { "type": "integer", "format": "int64" } }],
+        "responses": { "200": { "description": "OK", "content": { "*/*": { "schema": { "$ref": "#/components/schemas/GameDTO" } } } } }
+      },
+      "put": {
+        "tags": ["game-controller"],
+        "operationId": "endGame",
+        "parameters": [{ "name": "id", "in": "path", "required": true, "schema": { "type": "integer", "format": "int64" } }],
+        "requestBody": {
+          "content": { "application/json": { "schema": { "type": "array", "items": { "$ref": "#/components/schemas/GamePlayerDTO" } } } },
+          "required": true
+        },
+        "responses": { "200": { "description": "OK" } }
+      }
+    },
     "/player": {
       "get": {
         "tags": ["player-controller"],
@@ -25,6 +43,7 @@
         "parameters": [
           { "name": "username", "in": "query", "required": false, "schema": { "type": "string" } },
           { "name": "email", "in": "query", "required": false, "schema": { "type": "string" } },
+          { "name": "deleted", "in": "query", "required": false, "schema": { "type": "boolean" } },
           {
             "name": "page",
             "in": "query",
@@ -82,10 +101,12 @@
             "in": "query",
             "description": "Sorting criteria in the format: property,(asc|desc). Default sort order is ascending. Multiple sort criteria are supported.",
             "required": false,
-            "schema": { "type": "array", "items": { "type": "string" }, "default": ["id,ASC"] }
+            "schema": { "type": "array", "items": { "type": "string" }, "default": ["startTimestamp,DESC"] }
           }
         ],
-        "responses": { "200": { "description": "OK", "content": { "*/*": { "schema": { "$ref": "#/components/schemas/PageGameDTO" } } } } }
+        "responses": {
+          "200": { "description": "OK", "content": { "*/*": { "schema": { "$ref": "#/components/schemas/PageGameInfoDTO" } } } }
+        }
       },
       "post": {
         "tags": ["game-controller"],
@@ -97,13 +118,31 @@
         "responses": { "201": { "description": "Created", "content": { "*/*": { "schema": { "type": "integer", "format": "int64" } } } } }
       }
     },
+    "/game/{gameId}/turn": {
+      "post": {
+        "tags": ["game-controller"],
+        "operationId": "newTurn",
+        "parameters": [{ "name": "gameId", "in": "path", "required": true, "schema": { "type": "integer", "format": "int64" } }],
+        "requestBody": { "content": { "application/json": { "schema": { "$ref": "#/components/schemas/TurnDTO" } } }, "required": true },
+        "responses": { "201": { "description": "Created" } }
+      },
+      "delete": {
+        "tags": ["game-controller"],
+        "operationId": "deleteLastTurn",
+        "parameters": [{ "name": "gameId", "in": "path", "required": true, "schema": { "type": "integer", "format": "int64" } }],
+        "responses": { "204": { "description": "No Content" } }
+      }
+    },
     "/statistics/player-dice-dashboard": {
       "get": {
         "tags": ["statistics-controller"],
         "operationId": "getPlayerOverallDiceDashboard",
         "parameters": [{ "name": "playerId", "in": "query", "required": true, "schema": { "type": "integer", "format": "int64" } }],
         "responses": {
-          "200": { "description": "OK", "content": { "*/*": { "schema": { "$ref": "#/components/schemas/DiceDashboardDTO" } } } }
+          "200": {
+            "description": "OK",
+            "content": { "*/*": { "schema": { "type": "object", "additionalProperties": { "type": "integer", "format": "int64" } } } }
+          }
         }
       }
     },
@@ -113,7 +152,17 @@
         "operationId": "getGameDiceDashboard",
         "parameters": [{ "name": "gameId", "in": "query", "required": true, "schema": { "type": "integer", "format": "int64" } }],
         "responses": {
-          "200": { "description": "OK", "content": { "*/*": { "schema": { "$ref": "#/components/schemas/DiceDashboardDTO" } } } }
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": { "type": "object", "additionalProperties": { "type": "integer", "format": "int64" } }
+                }
+              }
+            }
+          }
         }
       }
     },
@@ -122,6 +171,7 @@
   "components": {
     "schemas": {
       "PlayerDTO": {
+        "required": ["email", "username"],
         "type": "object",
         "properties": {
           "id": { "type": "integer", "format": "int64", "readOnly": true },
@@ -129,15 +179,39 @@
           "email": { "type": "string" },
           "avatarUrl": { "type": "string" },
           "deleted": { "type": "boolean" }
-        }
+        },
+        "description": "Player Entity not related to a specific game"
+      },
+      "GamePlayerDTO": {
+        "required": ["email", "playerColor", "username"],
+        "type": "object",
+        "properties": {
+          "playerId": { "type": "integer", "format": "int64" },
+          "username": { "type": "string" },
+          "email": { "type": "string" },
+          "avatarUrl": { "type": "string" },
+          "startOrder": { "type": "integer", "format": "int32" },
+          "playerColor": { "type": "string" },
+          "developCardDrawn": { "minimum": 0, "type": "integer", "format": "int32" },
+          "knightCardPlayed": { "minimum": 0, "type": "integer", "format": "int32" },
+          "roadsBuilt": { "minimum": 2, "type": "integer", "format": "int32" },
+          "coloniesBuilt": { "minimum": 2, "type": "integer", "format": "int32" },
+          "citiesBuilt": { "minimum": 0, "type": "integer", "format": "int32" },
+          "longestRoad": { "type": "boolean" },
+          "largestArmy": { "type": "boolean" },
+          "plainScore": { "minimum": 0, "type": "integer", "format": "int32" },
+          "victoryPointsDrawn": { "type": "integer", "format": "int32" },
+          "winner": { "type": "boolean" }
+        },
+        "description": "Player state relative to a specific game"
       },
       "GameInfoDTO": {
+        "required": ["gameName", "gameType"],
         "type": "object",
         "properties": {
           "gameName": { "type": "string" },
           "gameType": { "type": "string", "enum": ["STANDARD", "SEAFARERS"] },
-          "numberOfPlayers": { "maximum": 6, "minimum": 2, "type": "integer", "format": "int32" },
-          "requiredVictoryPoints": { "type": "integer", "format": "int32" }
+          "requiredVictoryPoints": { "minimum": 8, "type": "integer", "format": "int32" }
         },
         "description": "Basic info about the game"
       },
@@ -153,6 +227,7 @@
         "description": "Basic info about the players participating to the game"
       },
       "GameSetupDTO": {
+        "required": ["gameInfo"],
         "type": "object",
         "properties": {
           "gameInfo": { "$ref": "#/components/schemas/GameInfoDTO" },
@@ -160,34 +235,46 @@
         },
         "description": "Required info to setup a new game"
       },
-      "DiceDashboardDTO": {
+      "TurnDTO": {
         "type": "object",
-        "properties": { "diceCountMap": { "type": "object", "additionalProperties": { "type": "integer", "format": "int64" } } }
+        "properties": {
+          "gameId": { "type": "integer", "format": "int64" },
+          "playerId": { "type": "integer", "format": "int64" },
+          "outcome": { "maximum": 12, "minimum": 2, "type": "integer", "format": "int32" },
+          "developCardDrawn": { "minimum": 0, "type": "integer", "format": "int32" },
+          "knightCardPlayed": { "type": "boolean" },
+          "longestRoad": { "type": "boolean" },
+          "largestArmy": { "type": "boolean" },
+          "roadsBuilt": { "maximum": 16, "minimum": 0, "type": "integer", "format": "int32" },
+          "coloniesBuilt": { "minimum": 0, "type": "integer", "format": "int32" },
+          "citiesBuilt": { "minimum": 0, "type": "integer", "format": "int32" }
+        },
+        "description": "Action performed by a specific player in a specific game"
       },
       "PagePlayerDTO": {
         "type": "object",
         "properties": {
           "totalElements": { "type": "integer", "format": "int64" },
           "totalPages": { "type": "integer", "format": "int32" },
+          "pageable": { "$ref": "#/components/schemas/PageableObject" },
+          "first": { "type": "boolean" },
+          "last": { "type": "boolean" },
           "size": { "type": "integer", "format": "int32" },
           "content": { "type": "array", "items": { "$ref": "#/components/schemas/PlayerDTO" } },
           "number": { "type": "integer", "format": "int32" },
           "sort": { "type": "array", "items": { "$ref": "#/components/schemas/SortObject" } },
-          "first": { "type": "boolean" },
-          "last": { "type": "boolean" },
           "numberOfElements": { "type": "integer", "format": "int32" },
-          "pageable": { "$ref": "#/components/schemas/PageableObject" },
           "empty": { "type": "boolean" }
         }
       },
       "PageableObject": {
         "type": "object",
         "properties": {
-          "offset": { "type": "integer", "format": "int64" },
-          "sort": { "type": "array", "items": { "$ref": "#/components/schemas/SortObject" } },
+          "paged": { "type": "boolean" },
           "pageNumber": { "type": "integer", "format": "int32" },
           "pageSize": { "type": "integer", "format": "int32" },
-          "paged": { "type": "boolean" },
+          "offset": { "type": "integer", "format": "int64" },
+          "sort": { "type": "array", "items": { "$ref": "#/components/schemas/SortObject" } },
           "unpaged": { "type": "boolean" }
         }
       },
@@ -201,46 +288,30 @@
           "ignoreCase": { "type": "boolean" }
         }
       },
-      "GameDTO": {
-        "type": "object",
-        "properties": {
-          "id": { "type": "integer", "format": "int64" },
-          "gameName": { "type": "string" },
-          "gameType": { "type": "string", "enum": ["STANDARD", "SEAFARERS"] },
-          "numberOfPlayers": { "type": "integer", "format": "int32" },
-          "requiredVictoryPoints": { "type": "integer", "format": "int32" },
-          "startTimestamp": { "type": "string", "format": "date-time" },
-          "endTimestamp": { "type": "string", "format": "date-time" },
-          "gamePlayers": { "type": "array", "items": { "$ref": "#/components/schemas/GamePlayer" } }
-        }
-      },
-      "GamePlayer": {
-        "type": "object",
-        "properties": {
-          "gameId": { "type": "integer", "format": "int64" },
-          "playerId": { "type": "integer", "format": "int64" },
-          "startOrder": { "type": "integer", "format": "int32" },
-          "playerColor": { "type": "string" },
-          "plainScore": { "type": "integer", "format": "int32" },
-          "victoryPointsDrawn": { "type": "integer", "format": "int32" },
-          "winner": { "type": "boolean" }
-        }
-      },
-      "PageGameDTO": {
+      "PageGameInfoDTO": {
         "type": "object",
         "properties": {
           "totalElements": { "type": "integer", "format": "int64" },
           "totalPages": { "type": "integer", "format": "int32" },
-          "size": { "type": "integer", "format": "int32" },
-          "content": { "type": "array", "items": { "$ref": "#/components/schemas/GameDTO" } },
-          "number": { "type": "integer", "format": "int32" },
-          "sort": { "type": "array", "items": { "$ref": "#/components/schemas/SortObject" } },
+          "pageable": { "$ref": "#/components/schemas/PageableObject" },
           "first": { "type": "boolean" },
           "last": { "type": "boolean" },
+          "size": { "type": "integer", "format": "int32" },
+          "content": { "type": "array", "items": { "$ref": "#/components/schemas/GameInfoDTO" } },
+          "number": { "type": "integer", "format": "int32" },
+          "sort": { "type": "array", "items": { "$ref": "#/components/schemas/SortObject" } },
           "numberOfElements": { "type": "integer", "format": "int32" },
-          "pageable": { "$ref": "#/components/schemas/PageableObject" },
           "empty": { "type": "boolean" }
         }
+      },
+      "GameDTO": {
+        "required": ["gameInfo", "gamePlayers"],
+        "type": "object",
+        "properties": {
+          "gameInfo": { "$ref": "#/components/schemas/GameInfoDTO" },
+          "gamePlayers": { "type": "array", "items": { "$ref": "#/components/schemas/GamePlayerDTO" } }
+        },
+        "description": "Representation of a game and its players"
       }
     }
   }
